--- a/style.css
+++ b/style.css
@@ -1,90 +1,43 @@
-.shadowed {
-	text-shadow: 1px 1px 2px black;
-	color:       white;
+body {
+    background-color: rgb(48, 47, 47);
+    color: whitesmoke;
+    font-size: medium;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.stuff-box {
-	font-family: 'helvetica neue', helvetica, sans-serif;
-	color: white;
-	letter-spacing: 1px;
-	text-align: center;
-	padding: 3px 10px;
-	margin: 10px;
-	cursor: pointer;
-	border-radius: 10px;
-	border-width: 2px;
-	border-style: solid;
+ol li:nth-child(2n){
+    background-color: orangered;    
+}
+ol li:nth-child(2n + 1){
+    background-color: rgb(143, 40, 6);    
 }
 
-.timestamp {
-    font-size: smaller;
-    font-family: monospace;
-    padding: 0px 10px;
+div {
+    background-color: darkred;
 }
 
-.red {
-	border-color: rgb(255,0,0);
-	background:   rgb(180,60,60);
-	box-shadow: 1px 1px 2px rgba(200,0,0,0.4);
+.links {
+    background-color: rgb(250, 190, 69);
+    font-family: Arial, Helvetica, sans-serif;
+    color:wheat;
 }
 
-.yellow {
-	border-color: rgb(255,255,0);
-	background:   rgb(180,180,60);
-	box-shadow: 1px 1px 2px rgba(200,200,0,0.4);
+.posts {
+    padding: 50px;
+    margin: 25px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
 
-.blue {
-	border-color: rgb(0,0,255);
-	background:   rgb(60,60,180);
-	box-shadow: 1px 1px 2px rgba(0,0,200,0.4);
+.cheatsheet {
+    padding: 25px;
+    margin: 25px;
 }
 
-.green {
-	border-color: rgb(0,255,0);
-	background:   rgb(60,180,60);
-	box-shadow: 1px 1px 2px rgba(0,200,0,0.4);
+ul li:nth-child(2n){
+    background-color:darkolivegreen;
 }
 
-.black {
-    border-color: rgb(0,0,0);
-    background:   rgb(75,75,75);
-    box-shadow: 1px 1px 2px rgba(200,200,0,0.4);
+ul li:nth-child(2n + 1){
+    background-color:darkslategray;
 }
 
-.dark_purple {
-	border-color: rgb(74, 18, 60);
-	background: rgb(163, 56, 140);
-	box-shadow: 1px 1px 2px rgba(146, 2, 115, 0.4);
-}
-
-.orange {
-	border-color: rgb(244, 102, 7);
-	background: rgb(188, 118, 13);
-	box-shadow: 1px 1px 2px rgba(245, 164, 4, 0.4);
-}
-
-
-.light_blue {
-	border-color: rgb(7, 197, 244);
-	background: rgb(1, 175, 187);
-	box-shadow: 1px 1px 2px rgba(3, 185, 209, 0.4);
-}
-
-.white {
-	border-color: rgb(186, 186, 187);
-	background: rgb(140, 140, 141);
-	box-shadow: 1px 1px 2px rgba(241, 242, 242, 0.4);
-}
-
-.stuff-box22 {
-	font-family: 'helvetica neue', helvetica, sans-serif;
-	color: white;
-	letter-spacing: 1px;
-	padding: 3px 10px;
-	margin: 10px;
-	cursor: pointer;
-	border-radius: 10px;
-	border-width: 2px;
-	border-style: solid;
-}
