--- a/templates/about.html
+++ b/templates/about.html
@@ -50,13 +50,32 @@
       <ol class="text-post" style="margin:15px">
         <li>Current 3.95 GPA</li>
         <li>2nd Place in USU CTF competition</li>
+        <li>Was the assembies SBO officer in Highschool</li>
+        <li>Severed as a missionary for the Chruch of Jesus Christ of Latter-Day Saints in Argentina</li>
         <li>Can do a rubix cube in under 2 minutes</li>
         <li>Speaks fulent spanish</li>
+        <li>loves playing pickelball</li>
       </ol>
     </div>
   </div>
   <div id="mainDiv">
-    <h4 class="title">&nbsp;Photos:&nbsp;</h4>
+    <h4 class="title">&nbsp;2 Truths and 1 Lie:&nbsp;</h4>
+    <div class="text-post">
+        <ol style="margin:15px;">
+            <li style="list-style-type: decimal;">I Got married at 20 years old</li>
+            <li style="list-style-type: decimal;">I Have never broken a bone</li>
+            <li style="list-style-type: decimal;">I hate rollercoasters</li>
+        </ol>
+        <p>Guess the Lie:</p>
+        <form>
+            <select>
+                <option>#1</option>
+                <option>#2</option>
+                <option>#3</option>
+            </select>
+            <button>Vote</button>
+        </form>
+    </div>
   </div>
   </div>
   </body>
