--- a/templates/about.html
+++ b/templates/about.html
@@ -13,7 +13,7 @@
     <body>
     <div>
       <div id="menuDiv">
-      <img src="../img/profile.png" id="topLeft">
+      <img src="docs/assets/images/profile.png" id="topLeft">
       <div class="square-box">
       <a href="../index.html" ><p>HOME</p></a>
       <a href="about.html" ><p>ABOUT ME</p></a>
