Updated voting on 2 truths and 1 lie on About me page, and updated weather app to work, but URL is messed up to save request ammount

--- a/templates/history.html
+++ b/templates/history.html
@@ -18,9 +18,10 @@
                     <a href="../index.html" ><p>HOME</p></a>
                     <a href="about.html" ><p>ABOUT ME</p></a>
                     <a href="history.html" ><p>WORK HISTORY</p></a>
-                    <a href="flights.html" ><p>FLIGHT PRICE APP</p></a>
-                    <a href="weather.html" ><p>5 DAY FORCAST APP</p></a>
+                    <a href="flights.html" target="_blank"><p>FLIGHT PRICE APP</p></a>
+                    <a href="weather.html " target="_blank"><p>5 DAY FORCAST APP</p></a>
                     <a href="mailto: dyl2elite@gmail.com" ><p>EMAIL ME</p></a>
+                    <a href="../docs/assets/'Dylan Spencer Resume'.pdf" download="Dylan Spencer Resume"><p>DOWNLOAD RESUME</p></a>
                 </div>
             </div>
             <div id="mainDiv">
