--- a/style.css
+++ b/style.css
@@ -61,6 +61,17 @@ body {
     font-family: 'Courier New', Courier, monospace;
 }
 
+#answer {
+    float: left;
+    margin: 5px;
+    padding: 5px;
+    background-color: rgb(60, 0, 0);
+    border-radius: 15px;
+    border: solid black;
+    font-size: 12pt;
+    font-family: 'Courier New', Courier, monospace;
+}
+
 #topLeft {
     left: 0;
     top: 0;
