--- a/style/weather.css
+++ b/style/weather.css
@@ -1,3 +1,10 @@
+body {
+    background-color: rgb(48, 47, 47);
+    color: whitesmoke;
+    font-size: medium;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .shadowed {
 	text-shadow: 1px 1px 2px black;
 	color:       white;
@@ -59,8 +66,8 @@
 }
 
 .orange {
-	border-color: rgb(244, 102, 7);
-	background: rgb(188, 118, 13);
+	border-color: black;
+	background: orangered;
 	box-shadow: 1px 1px 2px rgba(245, 164, 4, 0.4);
 }
 
@@ -87,4 +94,17 @@
 	border-radius: 10px;
 	border-width: 2px;
 	border-style: solid;
+}
+
+.back-button {
+    background-color: brown;
+    width:fit-content;
+    height: inherit;
+    padding: 2px;
+    text-align: center;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    border: solid black 3px;
+	border-radius: 15px;
+	
 }
