--- a/templates/about.html
+++ b/templates/about.html
@@ -6,8 +6,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="../style.css" />
 		<script src="https://unpkg.com/vue@next"></script>
-
-    
+    <script src="../js/about.js"></script>
     </head>
 
     <body>
@@ -18,9 +17,10 @@
       <a href="../index.html" ><p>HOME</p></a>
       <a href="about.html" ><p>ABOUT ME</p></a>
       <a href="history.html" ><p>WORK HISTORY</p></a>
-      <a href="flights.html" ><p>FLIGHT PRICE APP</p></a>
-      <a href="weather.html" ><p>5 DAY FORCAST APP</p></a>
+      <a href="flights.html" target="_blank"><p>FLIGHT PRICE APP</p></a>
+      <a href="weather.html " target="_blank"><p>5 DAY FORCAST APP</p></a>
       <a href="mailto: dyl2elite@gmail.com" ><p>EMAIL ME</p></a>
+      <a href="../docs/assets/'Dylan Spencer Resume'.pdf" download="Dylan Spencer Resume"><p>DOWNLOAD RESUME</p></a>
       </div>
     </div>
     <div id="mainDiv">
@@ -60,7 +60,7 @@
   </div>
   <div id="mainDiv">
     <h4 class="title">&nbsp;2 Truths and 1 Lie:&nbsp;</h4>
-    <div class="text-post">
+    <div class="text-post" style="padding-bottom: 50px;">
         <ol style="margin:15px;">
             <li style="list-style-type: decimal;">I Got married at 20 years old</li>
             <li style="list-style-type: decimal;">I Have never broken a bone</li>
@@ -68,13 +68,14 @@
         </ol>
         <p>Guess the Lie:</p>
         <form>
-            <select>
+            <select id="vote-choice">
                 <option>#1</option>
                 <option>#2</option>
                 <option>#3</option>
             </select>
-            <button>Vote</button>
+            <input id="submit" type="button" value="vote" onclick="printMessage();"></input>
         </form>
+          <p id="answer">Waiting for answer..</p>
     </div>
   </div>
   </div>
