--- a/templates/weather.html
+++ b/templates/weather.html
@@ -5,25 +5,26 @@
 	<head>
 		<title>Weather App</title>
 		<meta charset="utf-8">
+		<link href="../style.css" rel="stylesheet">
 		<link href="../style/weather.css" rel="stylesheet">
 		<script src="https://unpkg.com/vue@next"></script>
 		<script src="../js/weather.js" defer> </script>
 	</head>
 
-	<body style="background-color:bisque">
+	<body>
 		<div class="orange stuff-box shadowed">
 			<h1>Vue.JS Weather App</h1>
-            <a href="../index.html">Back To Home</a>
+            <a href="../index.html"><p class="back-button">Back To Home</p></a>
 		</div>
 
-		<div id="current-location" class="shadowed light_blue stuff-box shadowed">
+		<div id="current-location" class="red stuff-box shadowed">
 			<h2>Your location</h2>
 			<p v-if="!done">Loading...</p>
 			<p v-else-if="iserror">{{ error }}</p>
 			<p v-else>Your are located at {{city}}, {{region}}, {{country}} at coordinates ({{lat}}, {{lon}})</p>
 		</div>
 
-		<div id="current-conditions" class="shadowed blue stuff-box shadowed">
+		<div id="current-conditions" class="red stuff-box shadowed">
 			<h2>Current conditions</h2>
 			<p v-if="done">Current weather conditions at: {{ date }}</p>
 			<p v-else-if="iserror">{{ error }}</p>
