--- a/templates/calculator.html
+++ b/templates/calculator.html
@@ -8,6 +8,6 @@
 	</head>
 	<body>
 		<script src="../js/calculator.js"> </script>
-        <a href="../index.html">Home Page</a>
+        <a class="back-button" href="../index.html">Home Page</a>
 	</body>
 </html>
