--- a/style/weather.css
+++ b/style/weather.css
@@ -5,6 +5,11 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+a {
+	text-decoration: none;
+	color: white;
+}
+
 .shadowed {
 	text-shadow: 1px 1px 2px black;
 	color:       white;
@@ -100,7 +105,7 @@ body {
     background-color: brown;
     width:fit-content;
     height: inherit;
-    padding: 2px;
+    padding: 5px;
     text-align: center;
     margin-top: 2px;
     margin-bottom: 2px;
